# cookiecutter-python-projects

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  requirements.txt  setup.cfg  tox.ini
.github/workflows/: auto-author-assign.yml  tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: bake_project_test.py
{{cookiecutter.project_name}}/: .envrc  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: codeql.yml  coverage.yml  pypi.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/requirements/: requirements.dev.txt
{{cookiecutter.project_name}}/tests/: main_test.py
{{cookiecutter.project_name}}/tests/unit/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __main__.py  main.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .prospector.yml  LICENSE  README.md  meson.build  pyproject.toml  requirements.dev.txt  tox.ini
{{cookiecutter.project_slug}}/.cookiecutter_data/: AGPL-3.0-or-later.txt  Apache-2.0.txt  BSD-3-Clause.txt  GPL-3.0-or-later.txt  ISC.txt  LGPL-3.0-or-later.txt  MIT.txt
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: auto-author-assign.yml  codeql.yml  coverage.yml  pypi.yml
{{cookiecutter.project_slug}}/tests/: main_test.py  test_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py  main.py  meson.build
