[metadata]
name = cookiecutter_python_project
version = 0.0.0
description = A simple template for cookiecutter based on my preferences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0x0d/cookiecutter-python-project
author = Rodolfo Olivieri
author_email = rodolfo.olivieri3@gmail.com
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
