[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cookiecutter"]
license = { text = "{{cookiecutter.open_source_license}}" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
version = "{{cookiecutter.version}}"
dynamic = ["version"]

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.__main__:main"

# Tool
[tool.setuptools.packages]
find = { exclude = ["tests*"] }

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["{{cookiecutter.project_slug}}"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.black]
line-length = 79
target-version = ["py311"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.isort]
profile = "black"
line_length = 79

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 100
quiet = false
color = true
omit-covered-files = true
