[metadata]
name = {{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
license = {{cookiecutter.open_source_license}}
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
{% if cookiecutter.has_entrypoint == 'Yes, create entrypoint' -%}
[options.entry_points]
console_scripts =
    {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}.main:main
{% endif %}
[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = {{cookiecutter.project_slug}}

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true
